tests/files/fail/ResultInvalidSyntax2.krna
import java::io::IOException

struct A {
    t: IOException?int
}